--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,4 +25,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:22.0.0'
     compile 'com.google.android.gms:play-services:6.5.87'
     compile 'com.google.guava:guava:18.0'
+    compile 'com.google.maps.android:android-maps-utils:0.3.4'
 }
