--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,16 @@
             android:name=".activity.detalhe.DetalheActivity"
             android:label="@string/title_activity_detalhe" >
         </activity>
+        <activity
+            android:name=".activity.pesquisa.PesquisaActivity"
+            android:label="@string/title_activity_pesquisa"
+            android:launchMode="singleTop">
+            <intent-filter>
+                <action android:name="android.intent.action.SEARCH" />
+            </intent-filter>
+            <meta-data android:name="android.app.searchable"
+                       android:resource="@xml/searchable"/>
+        </activity>
     </application>
 
 </manifest>
