--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="br.com.riotour" >
+    package="br.com.riotour">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -13,7 +13,7 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
@@ -23,7 +23,7 @@
 
         <activity
             android:name=".activity.maps.MapsActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -32,19 +32,17 @@
         </activity>
         <activity
             android:name=".activity.detalhe.DetalheActivity"
-            android:label="@string/title_activity_detalhe" >
-        </activity>
+            android:label="@string/title_activity_detalhe"></activity>
         <activity
             android:name=".activity.pesquisa.PesquisaActivity"
-            android:label="@string/title_activity_pesquisa" >
+            android:label="@string/title_activity_pesquisa">
             <meta-data
                 android:name="android.app.searchable"
                 android:resource="@xml/searchable" />
         </activity>
         <activity
             android:name=".activity.pesquisa.PesquisasRecentesActivity"
-            android:label="@string/title_activity_pesquisas_recentes" >
-        </activity>
+            android:label="@string/title_activity_pesquisas_recentes"></activity>
     </application>
 
 </manifest>
